Fix header alignment by ensuring consistent centering of content

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 header {
     height: 100px;
     display: flex;
+    justify-content: center;
     align-items: center;
     background-color: rgb(39, 39, 39);
 }
